Python 3.1 is not supported (fails with trollius, not supported by pip and pdb-clone).

--- a/README
+++ b/README
@@ -84,7 +84,7 @@ The following table lists the differences between clewn, vimGdb and pyclewn
     +---------------+-------------+-----------------------+------------------------+
     | language      | C           | C                     | Python 2.7             |
     |               |             |                       | or                     |
-    |               |             |                       | Python 3               |
+    |               |             |                       | Python >= 3.2          |
     |               |             |                       |                        |
     |               |             |                       | C language for the     |
     |               |             |                       | pdb-clone_ python      |
