--- a/README
+++ b/README
@@ -3,9 +3,12 @@ redirected to a Vim window, the console. The debugger commands are mapped to
 Vim user-defined commands, and with completion available on the commands and
 their first argument.
 
+Install Pyclewn with pip_ and extract a vimball from the installed Python
+package, then install the Vim runtime files with the vimball. See install_.
+
 **Features**
 
-* When pyclewn is started from gvim with the ``:Pyclewn`` command, the
+* When Pyclewn is started from gvim with the ``:Pyclewn`` command, the
   ``:Cinferiortty`` command may be used to launch a terminal connected to a
   pseudo terminal that becomes the controlling terminal of the program being
   debugged by gdb or by pdb.
@@ -20,7 +23,7 @@ their first argument.
   Pyclewn automatically finds the source file for the breakpoint if it exists,
   and tells Vim to load and display the file and highlight the line.
 
-* Multiple consecutive pyclewn sessions can be started from gvim with the
+* Multiple consecutive Pyclewn sessions can be started from gvim with the
   ``:Pyclewn`` command.
 
 * The value of an expression or variable is displayed in a balloon in gvim
@@ -52,7 +55,7 @@ their first argument.
 
 **pdb**
 
-* Pyclewn is a front-end to pdb-clone_. With breakpoints pyclewn runs just
+* Pyclewn is a front-end to pdb-clone_. With breakpoints Pyclewn runs just
   below the speed of the Python interpreter (the command line Python debugger,
   pdb, runs 10 to 100 times slower than the interpreter).
 
@@ -65,12 +68,16 @@ their first argument.
 **Specifications**
 
 * platforms
-   All unix platforms supported by Python - GNU gdb from macports is required
-   on Mac Os X.
+
+  + All unix platforms supported by Python.
+
+  + GNU gdb from macports is required on Mac Os X.
 
 * languages
-   Python 2.7 or Python >= 3.2 - C language for the pdb-clone_ Python
-   extension module, _bdb.
+
+  + Python 2.7 or Python >= 3.2.
+
+  + C language for the ``_bdb`` extension module of pdb-clone_.
 
 * Vim
 
@@ -78,10 +85,11 @@ their first argument.
 
   + vim 7.3 or above (vim in a terminal).
 
-  + pyclewn is a standalone program connected to Vim with a netbeans socket,
-    that may be started from Vim with the ``:Pyclewn`` command since Vim 7.3.
+  + ``pyclewn`` is a standalone program connected to Vim with a netbeans
+    socket, that may be started from Vim with the ``:Pyclewn`` command since
+    Vim 7.3.
 
-* gdb features
+* gdb
 
   + gdb/mi interface.
 
@@ -91,7 +99,7 @@ their first argument.
 
   + The project file.
 
-* pdb features
+* pdb
 
   + Interrupt the debuggee.
 
@@ -101,24 +109,15 @@ their first argument.
 
 **Licensing**
 
-* This software is licensed under the GNU General Public License Version 2.
-
-* pdb-clone is a derivative work of a part of Python and as such, subject to
-  the Python license_.
-
-.. toctree::
-   :maxdepth: 2
-   :hidden:
-
-   news
-   install
-   faq
-   mercurial
-   vim-patches
+This software is licensed under the GNU General Public License Version 2.
+Pdb-clone is a derivative work of a part of Python and as such, subject to
+the Python license_.
 
 .. _Vim: http://www.vim.org/
 .. _gdb: http://www.gnu.org/software/gdb/gdb.html
 .. _pdb: http://docs.python.org/3/library/pdb.html
+.. _pip: http://pip.pypa.io/en/latest/
+.. _install: http://pyclewn.sourceforge.net/install.html
 .. _license: http://docs.python.org/2.7/license.html
 .. _pdb-clone: http://pypi.python.org/pypi/pdb-clone
 .. vim:filetype=rst:tw=78:ts=8:et:
